# sqleaner

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/: main.py
src/sqleaner/: format.py
test/: test_formatting.py
test/inputs/cte_multiple_with/: input.sql  output.sql
test/inputs/cte_single_with/: input.sql  output.sql
test/inputs/function_calls/: input.sql  output.sql
test/inputs/join/: input.sql  output.sql
test/inputs/multiple_cols/: output.sql
test/inputs/single_col/: input.sql  output.sql
