[project]
name = "sqleaner"
description = "An opinionated SQL formatter"
version = "0.0.1"
dependencies = ["sqlparse", "sqloxide", "sqlglot", "sqltree"]

[project.scripts]
sqleaner = "main:main"

[project.optional-dependencies]
dev = ["black", "pylint", "pytest", "mypy", "pip-tools"]

[tool.setuptools.package-data]
"sqleaner" = ["py.typed"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.mypy]
files = ["src", "test"]
# strict mode
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["test.*"]
# so we don't need to type all our test with `-> None`
disallow_untyped_defs = false
disallow_incomplete_defs = false
